--- a/7. customer_outlow_prediction/customer_outflow_prediction.ipynb
+++ b/7. customer_outlow_prediction/customer_outflow_prediction.ipynb
@@ -2661,7 +2661,7 @@
    "source": [
     "- В первоначальные данных наблюдался значительный дисбаланс (80% ответов целевого признака были негативными и только 20% позитивными), из-за чего обученная на этих данных модель не проходила проверку на адекватность;\n",
     "\n",
-    "- Опытным путем мы пытались устранить дисбаланс классов тремя разными способами: upsampling, downsampling, параметр `class_weight = 'balanced'` при обучении модели. Как показали метрики финальной модели, в нашем случае метрики лучше при балансе классов способом ~~уменьшения выборки (downsampling)~~ увеличения выборки (upsampling);\n",
+    "- Опытным путем мы пытались устранить дисбаланс классов тремя разными способами: upsampling, downsampling, параметр `class_weight = 'balanced'` при обучении модели. Как показали метрики финальной модели, в нашем случае метрики лучше при балансе классов способом увеличения выборки (upsampling);\n",
     "\n",
     "- также опытным путем мы выяснили, что наилучшие метрики достигаются на выборке, где пропуски ничем не заменялись, а просто удалялись;\n",
     "\n",
@@ -2749,7 +2749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Финальная достигла заданой метрики (F1 > 0.59) и показывает адекватные результаты (F1-мера = 0.615);\n",
+    "- Финальная  модель достигла заданой метрики (F1 > 0.59) и показывает адекватные результаты (F1-мера = 0.615);\n",
     "- AUC-ROC = 0.75;\n",
     "- Данная модель может помочь маркетологам лучше определять клиентов, которые могут уйти в ближайшее время;\n",
     "- Для улучшения модели следует использовать данные, отражающие отношения клиента с банком в динамике."
