--- a/11_car_price_prediction/car_price_prediction.ipynb
+++ b/11_car_price_prediction/car_price_prediction.ipynb
@@ -94,7 +94,7 @@
         "import seaborn as sns\n",
         "from sklearn.linear_model import LinearRegression, SGDRegressor\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV, ShuffleSplit, cross_val_score\n",
-        "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+        "from sklearn.preprocessing import RobustScaler, OneHotEncoder\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.metrics import mean_squared_error, make_scorer\n",
         "from catboost import CatBoostRegressor\n",
@@ -1988,7 +1988,6 @@
       },
       "outputs": [],
       "source": [
-        "from sklearn.preprocessing import OneHotEncoder\n",
         "encoder = OneHotEncoder(sparse=False, drop='first')\n",
         "cat_cols_encoded = encoder.fit_transform(data[cat_cols])"
       ]
@@ -2393,7 +2392,6 @@
       },
       "outputs": [],
       "source": [
-        "from sklearn.preprocessing import RobustScaler\n",
         "scaler = RobustScaler()\n",
         "scaler.fit(X_train)\n",
         "X_train = scaler.transform(X_train)\n",
@@ -30297,7 +30295,18 @@
     },
     "colab": {
       "name": "car_price_prediction.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "5DmFeLSgfE3S",
+        "Y56o1YNLfE3i",
+        "-eZTh-ivfE3i",
+        "3gBqcri_fE3j",
+        "es3f1A_xfE3p",
+        "WE5tX3KafE3t",
+        "3GZ5UuUIfE3u",
+        "afwZPBDDfE3w",
+        "wgF_CGaQfE3y"
+      ]
     }
   },
   "nbformat": 4,
